plotly API tweaks

--- a/examples/examples.html
+++ b/examples/examples.html
@@ -128,7 +128,7 @@ var config = {
             width: 350,
             height: 350,
             margin: { 'l': 30, 'r': 30, 't': 30, 'b': 30, 'pad': 0 },
-            angularAxis: {domain: null},
+            angularAxis: {range: null},
             plot_bgcolor: 'ghostwhite',
             font: {
                 family: 'Arial, sans-serif',
@@ -273,7 +273,7 @@ var config = {
             margin: { l: 20, r: 10, t: 40, b: 20, pad: 0 },
             plot_bgcolor: 'ghostwhite',
             radialAxis: {orientation: -36},
-            angularAxis: {domain: null},
+            angularAxis: {range: null},
             font: {
                 family: 'Arial, sans-serif',
                 size: 12,
@@ -328,7 +328,7 @@ var config = {
         orientation: 10, //identical
         labeloffset: 20, //labelOffset
         radialaxis: { //identical
-            domain: null, //identical
+            range: null, //identical
             orientation: -45, //upolar only
 //            rewriteTicks: null, //TODO expose
             ticksuffix: '$', //upolar only, ticksSuffix, to be exposed
@@ -337,7 +337,7 @@ var config = {
             tickorientation: 'vertical' //upolar only, tickOrientation, != tickangle
         },
         angularaxis: { //identical
-            domain: null, //identical
+            range: null, //identical
             ticksuffix: '%', //upolar only, ticksSuffix, to be exposed
 //            rewriteTicks: null, //TODO expose
             visible: true,
