--- a/index.html
+++ b/index.html
@@ -45,14 +45,7 @@
     <hr />
     <h1>Usage examples</h1>
     <div class="advanced-example-container">
-        <h2>Multi line plot: microphone patterns</h2>
-        <div id="mic-pattern">
-        <a class="jsbin-embed" href="http://jsbin.com/eHufOvE/15/embed?output">JS Bin</a>
-        </div>
-        <h2>Stacked area chart: nightingale chart (by <a href="https://github.com/timelyportfolio">timelyportfolio</a>)</h2>
-        <div id="nightingale">
-        <a class="jsbin-embed" href="http://jsbin.com/UtiDoDO/4/embed?output"></a>
-        </div>
+        <iframe src="http://embed.plnkr.co/DTheQmbL9p8eL7IgjNNG/preview" width="100%" height="100%" frameborder="0"></iframe>
     </div>
     <br />
     <hr />
