--- a/examples/examples2.html
+++ b/examples/examples2.html
@@ -3,7 +3,8 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title></title>
-    <script type='text/javascript' src="http://d3js.org/d3.v3.min.js"></script>
+    <script type='text/javascript' src="../lib/d3.js"></script>
+    <!--<script type='text/javascript' src="http://d3js.org/d3.v3.min.js"></script>-->
     <!--<script type='text/javascript' src="https://rawgit.com/biovisualize/micropolar/master/micropolar-v0.2.2.js"></script>-->
     <script type='text/javascript' src="../src/micropolar.js"></script>
     <style>
@@ -37,6 +38,9 @@
     var superformula3 = superformulaGenerator({m: 10, n1: 3, n2: 0.6, n3: 0, a: 1, b: 1});
 
     var configs = [
+        {data:[{t: ['A', 'B', 'B', 'A'], r: [1, 1, 1, 1]}], layout: {needsEndSpacing:false}},
+        {data:[{t: [0, 120, 240, 0], r: [1, 1, 1, 1]}], layout: {needsEndSpacing:false}},
+        
         {data:[{t:d3.range(0, 360 + 6, 6), r:d3.range(0, 360 + 6, 6).map(function(deg){ return Math.abs(Math.cos(deg * Math.PI / 180));}),color:"none",strokeColor:"peru",geometry:"LinePlot",name:"Figure8"},
             {t:d3.range(0, 360 + 6, 6), r:d3.range(0, 360 + 6, 6).map(function(deg){ return Math.abs(0.5 + 0.5 * Math.cos(deg * Math.PI / 180));}),color:"none",strokeColor:"darkviolet",geometry:"LinePlot",name:"Cardioid"},
             {t:d3.range(0, 360 + 6, 6), r:d3.range(0, 360 + 6, 6).map(function(deg){ return Math.abs(0.25 + 0.75 * Math.cos(deg * Math.PI / 180));}),color:"none",strokeColor:"deepskyblue",geometry:"LinePlot",name:"Hypercardioid"},
@@ -80,7 +84,7 @@
     configs.forEach(function(_config){
         var config = {layout: {width: 400, height: 400}};
         µ.util.deepExtend(config, _config);
-        console.log(JSON.stringify(µ.adapter.plotly().convert(config, true)));
+//        console.log(JSON.stringify(µ.adapter.plotly().convert(config, true)));
         micropolar.Axis().config(config).render(d3.select('body').append('div'));
     });
 
