--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
         ga('send', 'pageview');
     </script>
     <style>
-        #mic-pattern iframe, #nightingale iframe{
-            height:400px !important;
-        }
         h2{
             margin-top: 30px;
         }
@@ -49,6 +46,12 @@
     </div>
     <br />
     <hr />
+	<h1>Documentation</h1>
+	<div class="documentation-container">
+		<iframe src="http://embed.plnkr.co/n3GqCJ/index.html" width="100%" height="100%" frameborder="0"></iframe>
+	</div>
+	<br />
+	<hr />
     by Christophe Viau | GitHub: <a href="https://github.com/biovisualize">Biovisualize</a> | Twitter: <a href="https://twitter.com/d3visualization">@d3visualization</a> | <a href="http://www.linkedin.com/in/christopheviau">Linkedin</a>
 </div>
 
