more fix to plunker embed

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <hr />
     <h1>Usage examples</h1>
     <div class="advanced-example-container">
-        <iframe src="http://embed.plnkr.co/DTheQmbL9p8eL7IgjNNG?show=preview" width="100%" height="100%" frameborder="0"></iframe>
+        <iframe src="http://embed.plnkr.co/DTheQmbL9p8eL7IgjNNG?show=preview" width="500" height="100%" frameborder="0"></iframe>
     </div>
     <br />
     <hr />
 	<h1>Documentation</h1>
 	<div class="documentation-container">
-		<iframe src="http://embed.plnkr.co/n3GqCJ?show=index.html" width="100%" height="100%" frameborder="0"></iframe>
+		<iframe src="http://embed.plnkr.co/n3GqCJ?show=index.html" width="700" height="100%" frameborder="0"></iframe>
 	</div>
 	<br />
 	<hr />
